# ida-libbfd-loader

./: CMakeLists.txt  README.md  ida-libbfd-loader.cpp  makefile
cmake/: FindBfd.cmake  FindIconv.cmake
